syntax = "proto3";

option go_package = "github.com/ktr0731/grpc-test/api/emptypackage";

service EmptyPackageService {
  rpc Unary (SimpleRequest) returns (SimpleResponse) {}
}

message SimpleRequest {
  string name = 1;
}

message SimpleResponse {
  string message = 1;
}
